added clickable images, changed structure in flickrService, added some styling

--- a/index.html
+++ b/index.html
@@ -21,10 +21,22 @@
 			<tr>
 				<button id="getRecentButton" class="button">Get recent images</button>
 			</tr>
+			<tr>
+				<button id="loadImages" class="button">Load more images</button>
+			</tr>
+			<tr>
+				<button id="back" class="button">Back</button>
+			</tr>
 		</table>
 	</div>
-	<div id="mainContent"></div>
-	<button id="loadImages" class="button">Load more images</button>
+	<div id="mainContent">
+		<div id="photos">
+		</div>
+
+		<div id="originalPhoto">
+		</div> 
+
+	</div>
 
 	<script src="JavaScript/flickrService.js"></script>
 	<script src="JavaScript/main.js"></script>
