Added addPhotoToGallery, and som clean up

--- a/index.html
+++ b/index.html
@@ -16,23 +16,15 @@
                 <td>
                     <input type="text" name="searchField" id="searchField" placeholder="search for a tag">
                 </td>
-            </tr>
-            <tr>
                 <td>
                     <button id="searchButton" class="button">Search</button>
                 </td>
-            </tr>
-            <tr>
                 <td>
                     <button id="getRecentButton" class="button">Get recent images</button>
                 </td>
-            </tr>
-            <tr>
                 <td>
                     <button id="loadImages" class="button">Load more images</button>
                 </td>
-            </tr>
-            <tr>
                 <td>
                     <button id="back" class="button">Back</button>
                 </td>
@@ -44,19 +36,19 @@
         </div>
 
         <div id="originalPhoto">
-            <button class="button" id="addToGallery">Add image to gallery</button>
+            <button class="button" id="goToGallery">Add image to gallery</button>
         </div>
 
         <div id="gallery">
             <h2> create a gallery or choose existing</h2>
             <select id="galleries"></select>
             <input type="text" id="galleryName" />
-            <button id="galleryButton">Add gallery</button>
+            <button id="addToGalleryButton">Add gallery</button>
         </div>
 
     </div>
 
-    
+
     <script src="JavaScript/flickrService.js"></script>
     <script src="JavaScript/gallery.js"></script>
     <script src="JavaScript/main.js"></script>
