started on delete photo from gallery, lots of bugs in gallery

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <td>
                     <button id="back" class="button">Back</button>
                 </td>
+                <td>
+                    <button id="imageGallery" class="button">Show image gallery</button>
+                </td>
             </tr>
         </table>
     </div>
@@ -42,8 +45,10 @@
         <div id="gallery">
             <h2> create a gallery or choose existing</h2>
             <select id="galleries"></select>
-            <input type="text" id="galleryName" />
-            <button id="addToGalleryButton">Add gallery</button>
+            <button id="addToGalleryButton" class="button">Add to gallery</button>
+            <input type="text" id="newGalleryName" placeholder="galleryname"/>
+            <input type="text" id="galleryDescription" placeholder="galleryDescription"/>
+            <button id="createGalleryButton" class="button">Create a new gallery</button>
         </div>
 
     </div>
